Shang New Live/src/objects/LOI__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Term__c</fullName>
        <label>Billing Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>Type of business</description>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>F&amp;B</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Method__c</fullName>
        <description>managed by Global Picklist</description>
        <label>Charge Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Charge_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LOIs (Contact)</relationshipLabel>
        <relationshipName>LOIs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Month__c</fullName>
        <description>This field is created to be used in Workflow which auto generate LOI Agreement Name, as we want to flash month value</description>
        <formula>CASE(MONTH(DATEVALUE (CreatedDate )),
1, &quot;01&quot;,
2, &quot;02&quot;,
3, &quot;03&quot;, 
4, &quot;04&quot;, 
5, &quot;05&quot;, 
6, &quot;06&quot;,
7, &quot;07&quot;,
8, &quot;08&quot;,
9, &quot;09&quot;,
10, &quot;10&quot;,
11, &quot;11&quot;,
12, &quot;12&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Year__c</fullName>
        <description>This field is created to be used in Workflow which auto generate LOI Agreement Name, as we want to flash YYYY value</description>
        <formula>TEXT (YEAR( DATEVALUE( CreatedDate ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_s_in_expired__c</fullName>
        <formula>(LOI_End_Date__c - TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day(s) in expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Fixed_Amount__c</fullName>
        <label>Deposit Fixed Amount (Need to delete)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Pdf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposit Pdf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposit_Term__c</fullName>
        <label>Deposit Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LOIs (Financial Contact)</relationshipLabel>
        <relationshipName>LOIs_Financial_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fit_Out_Period_Days__c</fullName>
        <label>Fit-Out Period (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Day</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fit_Out_Period_Months__c</fullName>
        <label>Fit-Out Period (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generated_LOI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True If LOI Pdf document is already generated</description>
        <label>Generated LOI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handover_Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Handover Client Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Tenant__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LOIs</relationshipLabel>
        <relationshipName>LOIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handover_Date__c</fullName>
        <label>Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handover_Operation_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Handover Operation In Charge</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LOIs (Handover Operation In Charge)</relationshipLabel>
        <relationshipName>LOIs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOI_Auto__c</fullName>
        <displayFormat>LA-{MM}{YYYY}-{00000000}</displayFormat>
        <inlineHelpText>This is used in W/F to generate LOI Agreement No.</inlineHelpText>
        <label>LOI Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LOI_End_Date__c</fullName>
        <formula>IF(ISBLANK(TEXT(LOI_Tenure_Days__c)),0,+ VALUE(TEXT(LOI_Tenure_Days__c))) 
+ 
(DATE( 
YEAR( LOI_Start_Date__c ) + FLOOR( ( MONTH ( LOI_Start_Date__c ) + LOI_Tenure_Mths__c - 1 ) / 12 ), 
MOD( MONTH ( LOI_Start_Date__c ) + LOI_Tenure_Mths__c - 1 + 
IF( DAY ( LOI_Start_Date__c ) &gt; CASE( MOD( MONTH( LOI_Start_Date__c ) + LOI_Tenure_Mths__c - 1, 12 ) + 1, 
2, 28, 
4, 30, 
6, 30, 
9, 30, 
11, 30, 
31 ), 1, 0 ), 12 ) + 1, 
IF( DAY( LOI_Start_Date__c ) &gt; CASE( MOD( MONTH( LOI_Start_Date__c) + LOI_Tenure_Mths__c - 1, 12 ) + 1, 
2, 28, 
4, 30, 
6, 30, 
9, 30, 
11, 30, 
31 ), 
1, DAY( LOI_Start_Date__c ) 
) 
)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Index__c</fullName>
        <label>LOI Index</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOI_Signed_Date__c</fullName>
        <label>LOI Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Signed_off_Date__c</fullName>
        <label>LOI Signed-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Start_Date__c</fullName>
        <label>LOI Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Status__c</fullName>
        <description>Status of the LOI 
New = New sign-up 
Renewal = LOI is renewed 
Expire = LOI has expired with no renewal 
Pre-Term = LOI has pre-terminated</description>
        <label>LOI Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pre-Terminated</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOI_Tenure_Days__c</fullName>
        <label>LOI Tenure (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Day</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOI_Tenure_Mths__c</fullName>
        <label>LOI Tenure (Mths)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOI_Validity_Date__c</fullName>
        <inlineHelpText>Populated through W/F
Validity Week + Created date</inlineHelpText>
        <label>LOI Validity (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Validity_Week__c</fullName>
        <label>LOI Validity (Week)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOI_Validity_Week</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landlord_s_Address__c</fullName>
        <label>Landlord’s Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Landlord_s_Position__c</fullName>
        <label>Landlord’s Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_s_representative__c</fullName>
        <label>Landlord’s representative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Payment_Interest__c</fullName>
        <label>Late Payment Interest (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opening_Date__c</fullName>
        <formula>Property__r.Actual_Opening_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Option_to_Renew__c</fullName>
        <description>Option to renew in number of years</description>
        <label>Option to Renew (Mths)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_End_Date__c</fullName>
        <inlineHelpText>This field would be populated only in the case of Extension or Pre-Termination and would show the Revised End Date as per Extension or Pre-Termination.</inlineHelpText>
        <label>Revised End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permitted_Use__c</fullName>
        <label>Permitted Use</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price_Factor__c</fullName>
        <description>managed by LOI interface: GenerateLOI</description>
        <inlineHelpText>Populated via Property &gt; Pricing Factor table based on Tenant Type</inlineHelpText>
        <label>Price Factor</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Id__c</fullName>
        <formula>Property__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <formula>Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <formula>Property__r.Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>LOIs</relationshipLabel>
        <relationshipName>LOIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Termination__c</fullName>
        <label>Reason for Cancellation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Renovation_Rebates_Terms__c</fullName>
        <label>Renovation Rebates Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Renovation_Rebates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renovation Rebates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rent_Free_End_Date__c</fullName>
        <label>Rent Free End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_Free_Start_Date__c</fullName>
        <label>Rent Free Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_Roll__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rent Roll</label>
        <referenceTo>Rent_Roll__c</referenceTo>
        <relationshipLabel>LOIs</relationshipLabel>
        <relationshipName>LOIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Different stages for Letter of Intent and LOI Agreement</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LOI Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>LOI Approval</fullName>
                </value>
                <value>
                    <fullName>LOI Approved</fullName>
                </value>
                <value>
                    <fullName>LOI Sent</fullName>
                </value>
                <value>
                    <fullName>LOI Signed</fullName>
                </value>
                <value>
                    <fullName>LOI Cancelled</fullName>
                </value>
                <value>
                    <fullName>LA Draft</fullName>
                </value>
                <value>
                    <fullName>LA Sent</fullName>
                </value>
                <value>
                    <fullName>LA Cancelled</fullName>
                </value>
                <value>
                    <fullName>LA Variation</fullName>
                </value>
                <value>
                    <fullName>LA Signed</fullName>
                </value>
                <value>
                    <fullName>LA Approval</fullName>
                </value>
                <value>
                    <fullName>LA Approved</fullName>
                </value>
                <value>
                    <fullName>LA Stamped</fullName>
                </value>
                <value>
                    <fullName>LA Completed</fullName>
                </value>
                <value>
                    <fullName>LA Converted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staggered_Rent__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check for staggered rental</description>
        <label>Staggered Rent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tenant_Address__c</fullName>
        <label>Tenant Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tenant_Id__c</fullName>
        <formula>Tenant__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenant Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_Name_Acceptance__c</fullName>
        <label>Tenant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_Name__c</fullName>
        <formula>Tenant__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_Position__c</fullName>
        <label>Tenant Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_Type__c</fullName>
        <label>Tenant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tenant_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tenant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LOIs</relationshipLabel>
        <relationshipName>LOIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions__c</fullName>
        <label>Terms &amp; Conditions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Approval__c</fullName>
        <label>Test Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Category__c</fullName>
        <label>Trade Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Trade_Category</valueSetName>
        </valueSet>
    </fields>
    <label>LOI</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Tenant__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllTMLOI</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Tenant__c</columns>
        <columns>Contact__c</columns>
        <columns>Tenant_Type__c</columns>
        <columns>LOI_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LOI_Validity_Date__c</columns>
        <columns>LOI_Start_Date__c</columns>
        <columns>Original_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Name_Text__c</field>
            <operation>contains</operation>
            <value>Training</value>
        </filters>
        <label>All TM LOI</label>
    </listViews>
    <nameField>
        <label>LOI Agreement No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LOIs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>